results/SVCOMP/specgen/log-putfield_getfield1-2024_02_29_08_50_08.txt
class A {
  //@ public model int i;
}
;

class putfield_getfield1 {
  //@ ensures \result == true;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:10: error: cannot find symbol
    a.i = 999;
     ^
  symbol:   variable i
  location: variable a of type A
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:11: error: cannot find symbol
    return 999 == a.i;
                   ^
  symbol:   variable i
  location: variable a of type A
2 errors

class A {
  //@ public model int i;
}
;

class putfield_getfield1 {
  //@ ensures \result == true;
  public static boolean f() {
    A a = new A();
    //@ set a.i = 999;
    //@ assert a.i == 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:12: error: cannot find symbol
    return 999 == a.i;
                   ^
  symbol:   variable i
  location: variable a of type A
1 error

class A {
  //@ public model int i;
}
;

class putfield_getfield1 {
  //@ ensures \result == true;
  public static boolean f() {
    A a = new A();
    //@ set a.i = 999;
    //@ assert a.i == 999;
    return true;
  }
}

